--- a/style.css
+++ b/style.css
@@ -8,10 +8,81 @@ body {
   color: #222;
 }
 
-.box-container {
+.flex-container {
   display: flex;
+  border-style: dotted;
 }
-.header {
-  display: flex;
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
   text-decoration: none;
+  color: #222;
+}
+
+a {
+  text-decoration: none;
+  margin: 5px;
+  padding: 5px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: baseline;
+}
+
+.nav-left {
+  margin-left: 15px;
+}
+
+.nav-right {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.nav-link-round {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+/* Need to fix the hover component its not showing in the right place */
+.nav-link-round:hover {
+  background-color: #f0f0f0;
+}
+
+button {
+  border: none;
+}
+
+.button-sign {
+  background-color: #1a73e8;
+  color: #fff;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 5px;
+  font-family: arial, sans-serif;
+}
+
+.button-sign:hover {
+  background-color: #2b7de9;
+}
+
+.button-apps {
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  background-image: url("https://api.iconify.design/mdi/dots-grid.svg?color=%235f6368&width=24&height=24");
+  opacity: 0.6;
+  padding-top: 10px;
+}
+
+span:hover {
+  background-color: grey;
 }
